# influxdb-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
influxdb-line-protocol/: Cargo.toml  README.md
influxdb-line-protocol/src/: data_point.rs  error.rs  field_value.rs  lib.rs  tests.rs
influxdb-line-protocol/src/data_point/: tests.rs
